syntax = "proto3";

import "google/protobuf/timestamp.proto";

package generate;

option go_package = "../generate;generate";

// 生成服务定义
service GenerateService {
  // 获取原始URL
  rpc GetOriginalUrl(GetOriginalUrlRequest) returns (GetOriginalUrlResponse);
}

// 获取原始URL请求
message GetOriginalUrlRequest {
  string short_code = 1;
}

// 获取原始URL响应
message GetOriginalUrlResponse {
  string original_url = 1;
  google.protobuf.Timestamp expire_time = 2;
  bool is_active = 3;
  string error_message = 4;
}